# sq8l

./: .gitignore  CMakeLists.txt  README.md
lib/catch/: catch.cpp
scripts/: pack_data.py  split_frames.py
src/data/: CMakeLists.txt  Data.cpp  Data.h
src/engine/: Amp.cpp  Amp.h  CMakeLists.txt  Data.cpp  Data.h  Doc.cpp  Doc.h  FilterBase.cpp  FilterBase.h  FilterSq.cpp  FilterSq.h  MidiParser.cpp  MidiParser.h  ModFoll.cpp  ModFoll.h  PackDlt.cpp  PackDlt.h  PackRle.cpp  PackRle.h  SimPack.cpp  SimPack.h  SoundLib.cpp  SoundLib.h  SqEnv.cpp  SqEnv.h  SqLfo.cpp  SqLfo.h  Synth.cpp  Synth.h
src/plugin/: CMakeLists.txt  Data.h  LcdButton.cpp  LcdButton.h  LcdScreen.cpp  LcdScreen.h  LookAndFeel.cpp  LookAndFeel.h  ParameterHelper.cpp  ParameterHelper.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.cpp  Preset.h  PresetPanel.cpp  PresetPanel.h  ProgramLoader.cpp  ProgramLoader.h  ProgramManager.cpp  ProgramManager.h  program.cpp  program.h
test/: DocTest.cpp  PackDlt36Test.cpp  ProgramLoaderTest.cpp  functional_tests.cpp  system_tests.cpp  test_utils.cpp  test_utils.h
testdata/: ANABAS.syx
